# billvivino.github.io

./: .gitignore  2026-mvp-blueprint.html  CNAME  _config.yml  ai-integration-consultant.html  ai-software-development.html  app-developer-for-startups.html  aws-backend-cost-reality.html  blog.html  cheap-dev-false-economy-calculator.html  coding-ai-portal.html  contact.html  custom-mobile-app-developer.html  custom-software-cost-reality-check.html  database-model-decision.html  decision-surface-risk-analyzer.html  direct-hire-software-developer.html  disavow.txt  document-database-stress-test.html  enterprise-custom-software-cost-estimator.html  experience.html  firebase-calculator.html  firebase-cost-scenario-planner.html  firebase-vs-supabase-vs-aws-vs-heroku-2026.html  firebase-vs-supabase-vs-heroku-vs-aws.html  fractional-cto-technical-advisor.html  healthcare-software-consultant.html  heroku-cost-calculator.html  hire-freelance-ai-software-developer.html  hire-freelance-mobile-app-developer.html  hire-freelance-software-developer.html  hire-full-stack-developer.html  hire-ios-app-developer.html  hire-mobile-app-developer.html  hire-senior-software-developer.html  hire-senior-software-engineer.html  hire-web-app-development company.html  hire-web-app-development-company.html  how-i-work.html  index.html  (+41 more)
bvt-coding-ai-backend/: .env.example  .gitignore  README.md  pyproject.toml
bvt-coding-ai-backend/app/: __init__.py  config.py  main.py  schemas.py  security.py
bvt-coding-ai-backend/docs/: product-thesis.md
bvt-coding-ai-backend/evals/: questions.yml
(+242 files in other folders)
