[project]
name = "bvt-coding-ai-backend"
version = "0.1.0"
description = "Local-first backend for the BVT Coding AI portal."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic-settings>=2.2,<3.0",
  "uvicorn[standard]>=0.29,<1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.5,<1.0"
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.setuptools.packages.find]
include = ["app*"]
